--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "name": "cocoa-discord-utils",
-  "version": "1.0.0",
+  "version": "1.0.0-test.1",
   "description": "Yet another Discord Bot Utility npm package",
-  "main": "index.js",
+  "main": "dist/index.js",
   "repository": "https://github.com/Leomotors/cocoa-discord-utils",
   "author": "Leomotors",
   "license": "MIT",
+  "type": "module",
+  "types": "dist",
+  "scripts": {
+    "build": "tsc -p .",
+    "clean": "rimraf dist",
+    "cb": "yarn clean && yarn build"
+  },
   "devDependencies": {
     "leomotors-automation": "^2.0.1",
     "typedoc": "^0.22.11",
@@ -13,9 +20,11 @@
   },
   "dependencies": {
     "chalk": "^5.0.0",
-    "discord.js": "^13.6.0"
+    "discord.js": "^13.6.0",
+    "rimraf": "^3.0.2"
   },
   "exports": {
+    ".": "./dist/index.js",
     "./slash": "./dist/slash/index.js"
   }
 }
