--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "cocoa-discord-utils",
-  "version": "1.0.0-test.1",
+  "version": "1.0.0-beta.1",
   "description": "Yet another Discord Bot Utility npm package",
   "main": "dist/index.js",
   "repository": "https://github.com/Leomotors/cocoa-discord-utils",
   "author": "Leomotors",
   "license": "MIT",
   "type": "module",
-  "types": "dist",
   "scripts": {
     "build": "tsc -p .",
     "clean": "rimraf dist",
-    "cb": "yarn clean && yarn build"
+    "cb": "yarn clean && yarn build",
+    "docs": "typedoc"
   },
   "devDependencies": {
     "leomotors-automation": "^2.0.1",
@@ -26,5 +26,15 @@
   "exports": {
     ".": "./dist/index.js",
     "./slash": "./dist/slash/index.js"
+  },
+  "typesVersions": {
+    "*": {
+      "*": [
+        "dist/index.d.ts"
+      ],
+      "slash": [
+        "./dist/slash/index.d.ts"
+      ]
+    }
   }
 }
