--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,3 +20,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VERSION_MUST_INCREASE: true
           RELEASE_ON_KEYWORD: ${{ github.event.commits[0].message }}
+          ALWAYS_GENERATE_NOTES: true
