--- a/package.json
+++ b/package.json
@@ -2,34 +2,41 @@
   "name": "cocoa-discord-utils",
   "version": "1.0.0-beta.2",
   "description": "Yet another Discord Bot Utility npm package",
-  "main": "dist/index.js",
+  "main": "index.js",
   "repository": "https://github.com/Leomotors/cocoa-discord-utils",
   "author": "Leomotors",
   "license": "MIT",
-  "type": "module",
   "scripts": {
-    "build": "yarn lm:config && tsc -p .",
-    "clean": "rimraf dist",
+    "build": "yarn lm:config && tsc",
+    "clean": "rimraf dist/*",
     "cb": "yarn clean && yarn build",
     "docs": "typedoc",
-    "lm:config": "lm-config src/meta/generated.ts"
+    "lm:config": "lm-config src/meta/generated.ts",
+    "test": "mocha -r ts-node/register --exit \"tests/index.spec.ts\""
   },
   "keywords": [
     "discord-bot",
     "slash-commands"
   ],
   "devDependencies": {
+    "@types/chai": "^4.3.0",
+    "@types/mocha": "^9.1.0",
+    "@types/node": "^17.0.12",
+    "@types/sinon": "^10.0.8",
+    "chai": "^4.3.4",
     "leomotors-automation": "^3.0.0",
+    "mocha": "^9.2.0",
+    "rimraf": "^3.0.2",
+    "sinon": "^12.0.1",
+    "ts-node": "^10.4.0",
     "typedoc": "^0.22.11",
-    "typescript": "^4.5.5",
-    "rimraf": "^3.0.2"
+    "typescript": "^4.5.5"
   },
   "dependencies": {
-    "chalk": "^5.0.0",
     "discord.js": "^13.6.0"
   },
   "exports": {
-    ".": "./dist/index.js",
+    ".": "./dist/main/index.js",
     "./message": "./dist/message/index.js",
     "./meta": "./dist/meta/index.js",
     "./slash": "./dist/slash/index.js"
@@ -37,7 +44,7 @@
   "typesVersions": {
     "*": {
       "*": [
-        "./dist/index.d.ts"
+        "./dist/main/index.d.ts"
       ],
       "message": [
         "./dist/message/index.d.ts"
