--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,7 @@
 {
     "tabWidth": 4,
     "useTabs": false,
-    "singleQuote": false
+    "singleQuote": false,
+    "semi": true,
+    "printWidth": 80
 }
