--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cocoa-discord-utils",
-  "version": "1.0.0-beta.2",
+  "version": "1.0.0-pre.1",
   "description": "Yet another Discord Bot Utility npm package",
   "main": "dist/main/index.js",
   "repository": "https://github.com/Leomotors/cocoa-discord-utils",
@@ -23,7 +23,7 @@
     "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.12",
     "@types/sinon": "^10.0.8",
-    "chai": "^4.3.4",
+    "chai": "^4.3.5",
     "leomotors-automation": "^3.0.0",
     "mocha": "^9.2.0",
     "rimraf": "^3.0.2",
@@ -33,13 +33,15 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@discordjs/builders": "^0.12.0",
     "discord.js": "^13.6.0"
   },
   "exports": {
     ".": "./dist/main/index.js",
     "./message": "./dist/message/index.js",
     "./meta": "./dist/meta/index.js",
-    "./slash": "./dist/slash/index.js"
+    "./slash": "./dist/slash/index.js",
+    "./template": "./dist/template/index.js"
   },
   "typesVersions": {
     "*": {
@@ -54,6 +56,9 @@
       ],
       "slash": [
         "./dist/slash/index.d.ts"
+      ],
+      "template": [
+        "./dist/template/index.d.ts"
       ]
     }
   }
