--- a/package.json
+++ b/package.json
@@ -1,39 +1,33 @@
 {
   "name": "cocoa-discord-utils",
-  "version": "1.0.0-pre.1",
+  "version": "1.0.0-pre.2",
   "description": "Yet another Discord Bot Utility npm package",
   "main": "dist/main/index.js",
   "repository": "https://github.com/Leomotors/cocoa-discord-utils",
   "author": "Leomotors",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "build": "yarn lm:config && tsc",
     "clean": "rimraf dist/*",
     "cb": "yarn clean && yarn build",
     "docs": "typedoc",
-    "lm:config": "lm-config src/meta/generated.ts",
-    "test": "TS_NODE_COMPILER_OPTIONS='{\"resolveJsonModule\":true}' mocha -r ts-node/register --exit tests/index.spec.ts"
+    "lm:config": "lm-config src/meta/generated.ts"
   },
   "keywords": [
     "discord-bot",
     "slash-commands"
   ],
   "devDependencies": {
-    "@types/chai": "^4.3.0",
-    "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.12",
-    "@types/sinon": "^10.0.8",
-    "chai": "^4.3.5",
     "leomotors-automation": "^3.0.0",
-    "mocha": "^9.2.0",
     "rimraf": "^3.0.2",
-    "sinon": "^12.0.1",
-    "ts-node": "^10.4.0",
     "typedoc": "^0.22.11",
     "typescript": "^4.5.5"
   },
   "dependencies": {
     "@discordjs/builders": "^0.12.0",
+    "chalk": "^5.0.0",
     "discord.js": "^13.6.0"
   },
   "exports": {
