--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cocoa-discord-utils",
-  "version": "1.0.0-pre.5",
+  "version": "1.0.0-pre.8",
   "description": "Yet another Discord Bot Utility npm package",
   "main": "dist/main/index.js",
   "repository": "https://github.com/Leomotors/cocoa-discord-utils",
@@ -19,8 +19,12 @@
     "slash-commands"
   ],
   "devDependencies": {
-    "@types/node": "^17.0.12",
+    "@types/node": "^17.0.13",
+    "@typescript-eslint/eslint-plugin": "^5.10.1",
+    "@typescript-eslint/parser": "^5.10.1",
+    "eslint": "^8.7.0",
     "leomotors-automation": "^3.0.0",
+    "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "typedoc": "^0.22.11",
     "typescript": "^4.5.5"
