--- a/.eslintrc
+++ b/.eslintrc
@@ -19,5 +19,14 @@
         "@typescript-eslint/no-non-null-assertion": "off",
         "@typescript-eslint/ban-ts-comment": "off",
         "prefer-const": "warn"
-    }
+    },
+    "overrides": [
+        {
+            "files": ["tests/**/*"],
+            "rules": {
+                "@typescript-eslint/no-unused-vars": "off",
+                "@typescript-eslint/no-empty-function": "off"
+            }
+        }
+    ]
 }
