--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
   "name": "cocoa-discord-utils",
-  "version": "1.0.0-pre.10",
+  "version": "1.0.0-pre.12",
   "description": "Yet another Discord Bot Utility npm package",
   "main": "dist/main/index.js",
   "repository": "https://github.com/Leomotors/cocoa-discord-utils",
   "author": "Leomotors",
   "license": "MIT",
-  "type": "module",
   "scripts": {
     "build": "yarn lm:config && tsc",
     "clean": "rimraf dist/*",
     "cb": "yarn clean && yarn build",
     "docs": "typedoc",
     "lm:config": "lm-config src/meta/generated.ts",
-    "prepack": "yarn cb",
+    "prepack": "yarn cb && yarn lint && yarn test",
     "format": "prettier --write \"src/**/*.ts\"",
-    "lint": "eslint src && prettier --check \"src/**/*.ts\""
+    "lint": "eslint src && prettier --check \"src/**/*.ts\"",
+    "test": "TS_NODE_COMPILER_OPTIONS='{\"resolveJsonModule\":true}' mocha -r ts-node/register --exit tests/index.spec.ts"
   },
   "keywords": [
     "discord-bot",
@@ -23,20 +23,27 @@
   ],
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^3.1.1",
+    "@types/chai": "^4.3.0",
+    "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.13",
+    "@types/sinon": "^10.0.9",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
+    "chai": "^4.3.6",
     "discord-api-types": "^0.26.1",
     "eslint": "^8.8.0",
     "leomotors-automation": "^3.0.0",
+    "mocha": "^9.2.0",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
+    "sinon": "^13.0.0",
+    "ts-node": "^10.4.0",
     "typedoc": "^0.22.11",
     "typescript": "^4.5.5"
   },
   "dependencies": {
     "@discordjs/builders": "^0.12.0",
-    "chalk": "^5.0.0",
+    "chalk": "4.1.2",
     "discord.js": "^13.6.0"
   },
   "exports": {
