--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Leomotors",
   "license": "MIT",
   "scripts": {
-    "build": "yarn lm:config && tsc",
+    "build": "yarn lm:config && tsc && rimraf \"dist/cli/**/*.d.ts\"",
     "clean": "rimraf dist/*",
     "cb": "yarn clean && yarn build",
     "docs": "typedoc",
@@ -22,13 +22,13 @@
     "slash-commands"
   ],
   "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "^3.1.1",
+    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.1.0",
-    "@types/node": "^17.0.13",
-    "@types/sinon": "^10.0.9",
-    "@typescript-eslint/eslint-plugin": "^5.10.1",
-    "@typescript-eslint/parser": "^5.10.1",
+    "@types/node": "^17.0.15",
+    "@types/sinon": "^10.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
     "chai": "^4.3.6",
     "discord-api-types": "^0.26.1",
     "eslint": "^8.8.0",
@@ -36,7 +36,7 @@
     "mocha": "^9.2.0",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
-    "sinon": "^13.0.0",
+    "sinon": "^13.0.1",
     "ts-node": "^10.4.0",
     "typedoc": "^0.22.11",
     "typescript": "^4.5.5"
@@ -44,6 +44,7 @@
   "dependencies": {
     "@discordjs/builders": "^0.12.0",
     "chalk": "4.1.2",
+    "commander": "^9.0.0",
     "discord.js": "^13.6.0"
   },
   "exports": {
@@ -87,5 +88,8 @@
         "./dist/slash/SlashSync.d.ts"
       ]
     }
+  },
+  "bin": {
+    "cocoadu": "dist/cli/index.js"
   }
 }
