--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,5 +20,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           RELEASE_TITLE: "Cocoa Discord Utils {VERSION}"
           VERSION_MUST_INCREASE: true
-          RELEASE_ON_KEYWORD: ${{ github.event.commits[0].message }}
+          RELEASE_ON_KEYWORD: ${{ github.event.head_commit.message }}
           ALWAYS_GENERATE_NOTES: true
