--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "prepack": "yarn cb && yarn lint && yarn test",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint src && prettier --check \"src/**/*.ts\"",
-    "test": "TS_NODE_COMPILER_OPTIONS='{\"resolveJsonModule\":true}' mocha -r ts-node/register --exit tests/index.spec.ts"
+    "test": "TS_NODE_COMPILER_OPTIONS='{\"resolveJsonModule\":true}' mocha -r ts-node/register --exit tests/index.spec.ts",
+    "ncu": "ncu -u !chalk"
   },
   "keywords": [
     "discord-bot",
@@ -25,20 +26,21 @@
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.1.0",
-    "@types/node": "^17.0.15",
-    "@types/sinon": "^10.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.10.2",
-    "@typescript-eslint/parser": "^5.10.2",
+    "@types/node": "^17.0.18",
+    "@types/sinon": "^10.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
     "chai": "^4.3.6",
-    "discord-api-types": "^0.26.1",
-    "eslint": "^8.8.0",
-    "leomotors-automation": "^3.0.0",
-    "mocha": "^9.2.0",
+    "discord-api-types": "^0.27.2",
+    "eslint": "^8.9.0",
+    "leomotors-automation": "^3.0.1",
+    "mocha": "^9.2.1",
+    "npm-check-updates": "^12.3.1",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "sinon": "^13.0.1",
-    "ts-node": "^10.4.0",
-    "typedoc": "^0.22.11",
+    "ts-node": "^10.5.0",
+    "typedoc": "^0.22.12",
     "typescript": "^4.5.5"
   },
   "dependencies": {
