--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.19",
     "@types/sinon": "^10.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.1",
     "chai": "^4.3.6",
     "discord-api-types": "^0.27.2",
     "eslint": "^8.9.0",
@@ -61,11 +61,9 @@
     "./internal/base": "./dist/base/index.js",
     "./internal/SlashSync": "./dist/slash/SlashSync.js"
   },
+  "typings": "./dist/main/index.d.ts",
   "typesVersions": {
     "*": {
-      "*": [
-        "./dist/main/index.d.ts"
-      ],
       "message": [
         "./dist/message/index.d.ts"
       ],
