--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,7 @@
     "plugins": ["@typescript-eslint"],
     "rules": {
         "indent": ["off", 4],
-        "quotes": ["warn", "double"],
+        "quotes": ["off", "double"],
         "semi": ["warn", "always"],
         "eol-last": "warn",
         "@typescript-eslint/no-unused-vars": [
@@ -18,6 +18,7 @@
         ],
         "@typescript-eslint/no-non-null-assertion": "off",
         "@typescript-eslint/ban-ts-comment": "off",
+        "@typescript-eslint/no-empty-function": "off",
         "prefer-const": "warn"
     },
     "overrides": [
