--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cocoa-discord-utils",
-  "version": "1.1.0-rc.1",
+  "version": "1.1.0-rc.2",
   "description": "Yet another Discord Bot Utility npm package",
   "main": "dist/main/index.js",
   "repository": "https://github.com/Leomotors/cocoa-discord-utils",
@@ -25,6 +25,7 @@
     "slash-commands"
   ],
   "devDependencies": {
+    "@leomotors/scripts": "^3.0.7",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.1.0",
@@ -33,9 +34,8 @@
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
     "chai": "^4.3.6",
-    "discord-api-types": "^0.27.2",
-    "eslint": "^8.9.0",
-    "leomotors-automation": "^3.0.1",
+    "discord-api-types": "^0.27.3",
+    "eslint": "^8.10.0",
     "mocha": "^9.2.1",
     "npm-check-updates": "^12.4.0",
     "prettier": "^2.5.1",
