--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cocoa-discord-utils",
-  "version": "1.1.0-rc.2",
+  "version": "1.1.0",
   "description": "Yet another Discord Bot Utility npm package",
   "main": "dist/main/index.js",
   "repository": "https://github.com/Leomotors/cocoa-discord-utils",
@@ -31,19 +31,19 @@
     "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.21",
     "@types/sinon": "^10.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.12.1",
-    "@typescript-eslint/parser": "^5.12.1",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
     "chai": "^4.3.6",
     "discord-api-types": "^0.27.3",
     "eslint": "^8.10.0",
     "mocha": "^9.2.1",
-    "npm-check-updates": "^12.4.0",
+    "npm-check-updates": "^12.5.2",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "sinon": "^13.0.1",
-    "ts-node": "^10.5.0",
-    "typedoc": "^0.22.12",
-    "typescript": "^4.5.5"
+    "ts-node": "^10.7.0",
+    "typedoc": "^0.22.13",
+    "typescript": "^4.6.2"
   },
   "dependencies": {
     "@discordjs/builders": "^0.12.0",
