--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cocoa-discord-utils",
-  "version": "1.1.0",
+  "version": "1.2.0-pre.1",
   "description": "Yet another Discord Bot Utility npm package",
   "main": "dist/main/index.js",
   "repository": "https://github.com/Leomotors/cocoa-discord-utils",
@@ -34,7 +34,7 @@
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.14.0",
     "chai": "^4.3.6",
-    "discord-api-types": "^0.28.0",
+    "discord-api-types": "^0.27.3",
     "eslint": "^8.10.0",
     "mocha": "^9.2.1",
     "npm-check-updates": "^12.5.2",
