--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Run lm-config
         run: yarn lm:config
 
-      - name: Run pre-docs
-        run: yarn pre-docs
+      - name: Run pre-doc
+        run: yarn pre-doc
 
       - name: Build documentation
         run: yarn docs
