--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
     "build": "yarn lm:config && yarn build-inner && rimraf \"dist/cli/**/*.d.ts\"",
     "clean": "rimraf dist/*",
     "cb": "yarn clean && yarn build",
-    "docs": "typedoc",
     "lm:config": "lm-config src/meta/cocoa_meta.g.ts",
     "prepack": "yarn cb && yarn lint && yarn test",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint src && prettier --check \"src/**/*.ts\"",
     "test": "TS_NODE_COMPILER_OPTIONS='{\"resolveJsonModule\":true}' mocha -r ts-node/register --exit tests/index.spec.ts",
-    "ncu": "ncu -u !chalk",
-    "pre-doc": "ts-node predoc.script.ts"
+    "ncu": "ncu -u \"/^(?!.*chalk)(?!.*globby).*$/\"",
+    "pre-doc": "ts-node predoc.script.ts",
+    "docs": "typedoc",
+    "post-doc": "ts-node postdoc.script.ts",
+    "full-doc": "yarn lm:config && yarn pre-doc && yarn docs && yarn post-doc"
   },
   "keywords": [
     "discord-bot",
@@ -29,17 +31,21 @@
     "@leomotors/scripts": "^3.0.7",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/chai": "^4.3.0",
+    "@types/marked": "^4.0.3",
     "@types/mocha": "^9.1.0",
-    "@types/node": "^17.0.21",
+    "@types/node": "^17.0.22",
     "@types/sinon": "^10.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.14.0",
-    "@typescript-eslint/parser": "^5.14.0",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
     "chai": "^4.3.6",
-    "discord-api-types": "^0.28.0",
-    "eslint": "^8.10.0",
-    "mocha": "^9.2.1",
-    "npm-check-updates": "^12.5.2",
-    "prettier": "^2.5.1",
+    "discord-api-types": "^0.29.0",
+    "eslint": "^8.11.0",
+    "globby": "11.1.0",
+    "highlight.js": "^11.5.0",
+    "marked": "^4.0.12",
+    "mocha": "^9.2.2",
+    "npm-check-updates": "^12.5.4",
+    "prettier": "^2.6.0",
     "rimraf": "^3.0.2",
     "sinon": "^13.0.1",
     "ts-node": "^10.7.0",
@@ -49,7 +55,7 @@
   "dependencies": {
     "@discordjs/builders": "^0.12.0",
     "chalk": "4.1.2",
-    "commander": "^9.0.0",
+    "commander": "^9.1.0",
     "discord.js": "^13.6.0"
   },
   "exports": {
