--- a/.github/workflows/caffemocha.yml
+++ b/.github/workflows/caffemocha.yml
@@ -1,12 +1,13 @@
 name: Caffe Mocha
 
 on:
-  push:
+  [push, pull_request]
 
 jobs:
   main:
     name: Iroiro na Test
     runs-on: ubuntu-latest
+    if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name != github.repository
 
     steps:
       - name: actions/checkout
