--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cocoa-discord-utils",
-  "version": "1.4.2",
+  "version": "1.5.0",
   "description": "Yet another Discord Bot Utility npm package",
   "main": "dist/main/index.js",
   "repository": "https://github.com/Leomotors/cocoa-discord-utils",
@@ -30,32 +30,34 @@
   "devDependencies": {
     "@leomotors/scripts": "^3.1.0",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
-    "@types/chai": "^4.3.0",
+    "@types/chai": "^4.3.1",
+    "@types/chai-as-promised": "^7.1.5",
     "@types/marked": "^4.0.3",
     "@types/mocha": "^9.1.0",
-    "@types/node": "^17.0.23",
+    "@types/node": "^17.0.25",
     "@types/sinon": "^10.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.16.0",
-    "@typescript-eslint/parser": "^5.16.0",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
     "chai": "^4.3.6",
-    "discord-api-types": "^0.30.0",
-    "eslint": "^8.11.0",
+    "chai-as-promised": "^7.1.1",
+    "discord-api-types": "^0.31.2",
+    "eslint": "^8.13.0",
     "globby": "11.1.0",
-    "highlight.js": "^11.5.0",
-    "marked": "^4.0.12",
+    "highlight.js": "^11.5.1",
+    "marked": "^4.0.14",
     "mocha": "^9.2.2",
-    "npm-check-updates": "^12.5.4",
-    "prettier": "^2.6.0",
+    "npm-check-updates": "^12.5.9",
+    "prettier": "^2.6.2",
     "rimraf": "^3.0.2",
-    "sinon": "^13.0.1",
+    "sinon": "^13.0.2",
     "ts-node": "^10.7.0",
-    "typedoc": "^0.22.13",
-    "typescript": "^4.6.2"
+    "typedoc": "^0.22.15",
+    "typescript": "^4.6.3"
   },
   "dependencies": {
     "@discordjs/builders": "^0.12.0",
     "chalk": "4.1.2",
-    "commander": "^9.1.0",
+    "commander": "^9.2.0",
     "discord.js": "^13.6.0"
   },
   "exports": {
