--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cocoa-discord-utils",
-  "version": "1.6.0",
+  "version": "2.0.0-dev",
   "description": "Yet another Discord Bot Utility npm package",
   "main": "dist/main/index.js",
   "repository": "https://github.com/Leomotors/cocoa-discord-utils",
@@ -33,14 +33,14 @@
     "@types/chai": "^4.3.1",
     "@types/chai-as-promised": "^7.1.5",
     "@types/marked": "^4.0.3",
-    "@types/mocha": "^9.1.0",
+    "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.25",
     "@types/sinon": "^10.0.11",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
-    "discord-api-types": "^0.31.2",
+    "discord-api-types": "^0.32.0-next.1212eb9.1650469859",
     "eslint": "^8.13.0",
     "globby": "11.1.0",
     "highlight.js": "^11.5.1",
@@ -55,10 +55,9 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
-    "@discordjs/builders": "^0.12.0",
     "chalk": "4.1.2",
     "commander": "^9.2.0",
-    "discord.js": "^13.6.0"
+    "discord.js": "^14.0.0-dev.1650586180-61a44c5"
   },
   "exports": {
     ".": "./dist/main/index.js",
