--- a/.github/workflows/caffemocha.yml
+++ b/.github/workflows/caffemocha.yml
@@ -23,4 +23,4 @@ jobs:
       - name: Mocha Test
         run: yarn test
       - name: Generating Documents Test
-        run: yarn docs
+        run: yarn full-doc
