--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "author": "Leomotors",
   "license": "MIT",
   "scripts": {
-    "build-inner": "tsc && tsc -p tsconfig.bruh.json",
-    "build": "yarn lm:config && yarn build-inner && rimraf \"dist/cli/**/*.d.ts\"",
+    "build": "yarn lm:config && tsc && ts-node postbuild.script.ts dist/**/*.js && rimraf \"dist/cli/**/*.d.ts\"",
     "clean": "rimraf dist/*",
     "cb": "yarn clean && yarn build",
     "lm:config": "lm-config src/meta/cocoa_meta.g.ts",
@@ -52,7 +51,8 @@
     "sinon": "^13.0.2",
     "ts-node": "^10.7.0",
     "typedoc": "^0.22.15",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "uglify-js": "^3.15.4"
   },
   "dependencies": {
     "chalk": "4.1.2",
