--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,7 @@
         "@typescript-eslint/no-non-null-assertion": "off",
         "@typescript-eslint/ban-ts-comment": "off",
         "@typescript-eslint/no-empty-function": "off",
+        "@typescript-eslint/no-namespace": "off",
         "prefer-const": "warn"
     },
     "overrides": [
