--- a/.prettierrc
+++ b/.prettierrc
@@ -6,6 +6,7 @@
     "semi": true,
     "printWidth": 80,
     "importOrder": [
+        "^\\.\\/stub",
         "^[a-zA-Z]",
         "^[.][.]",
         "^[.]"
