--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cocoa-discord-utils",
-  "version": "1.8.0",
+  "version": "1.9.0",
   "description": "Yet another Discord Bot Utility npm package",
   "main": "dist/main/index.js",
   "repository": "https://github.com/Leomotors/cocoa-discord-utils",
@@ -14,9 +14,9 @@
     "cb": "yarn clean && yarn build",
     "lm:config": "lm-config src/meta/cocoa_meta.g.ts",
     "prepack": "yarn cb && yarn lint && yarn test",
-    "format": "prettier --write \"{src,tests}/**/*.ts\"",
-    "lint": "eslint src && prettier --check \"{src,tests}/**/*.ts\"",
-    "test": "TS_NODE_COMPILER_OPTIONS='{\"resolveJsonModule\": true, \"noUncheckedIndexedAccess\": false}' mocha -r ts-node/register --exit tests/index.spec.ts",
+    "format": "prettier --write \"*.{js,ts}\" && prettier --write \"{src,tests}/**/*.ts\"",
+    "lint": "eslint src && prettier --check \"*.{js,ts}\" && prettier --check \"{src,tests}/**/*.ts\"",
+    "test": "jest",
     "ncu": "ncu -u \"/^(?!.*chalk)(?!.*globby).*$/\"",
     "pre-doc": "ts-node predoc.script.ts",
     "docs": "typedoc",
@@ -30,26 +30,22 @@
   "devDependencies": {
     "@leomotors/scripts": "^3.1.0",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
-    "@types/chai": "^4.3.1",
-    "@types/chai-as-promised": "^7.1.5",
+    "@types/jest": "^27.5.0",
     "@types/marked": "^4.0.3",
-    "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.31",
     "@types/sinon": "^10.0.11",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
-    "chai": "^4.3.6",
-    "chai-as-promised": "^7.1.1",
-    "discord-api-types": "^0.32.0",
     "eslint": "^8.14.0",
     "globby": "11.1.0",
     "highlight.js": "^11.5.1",
+    "jest": "^28.0.3",
     "marked": "^4.0.15",
-    "mocha": "^10.0.0",
     "npm-check-updates": "^12.5.11",
     "prettier": "^2.6.2",
     "rimraf": "^3.0.2",
     "sinon": "^13.0.2",
+    "ts-jest": "^28.0.1",
     "ts-node": "^10.7.0",
     "typedoc": "^0.22.15",
     "typescript": "^4.6.4"
