--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cocoa-discord-utils",
-  "version": "1.9.0-beta.1",
+  "version": "1.9.0",
   "description": "Yet another Discord Bot Utility npm package",
   "main": "dist/main/index.js",
   "repository": "https://github.com/Leomotors/cocoa-discord-utils",
@@ -30,25 +30,25 @@
   "devDependencies": {
     "@leomotors/scripts": "^3.1.0",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
-    "@types/jest": "^28.1.1",
+    "@types/jest": "^28.1.2",
     "@types/marked": "^4.0.3",
-    "@types/node": "^17.0.42",
+    "@types/node": "^18.0.0",
     "@types/sinon": "^10.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.27.1",
-    "@typescript-eslint/parser": "^5.27.1",
-    "eslint": "^8.17.0",
+    "@typescript-eslint/eslint-plugin": "^5.28.0",
+    "@typescript-eslint/parser": "^5.28.0",
+    "eslint": "^8.18.0",
     "globby": "11.1.0",
     "highlight.js": "^11.5.1",
     "jest": "^28.1.1",
     "marked": "^4.0.17",
-    "npm-check-updates": "^13.1.4",
-    "prettier": "^2.6.2",
+    "npm-check-updates": "^14.0.1",
+    "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "sinon": "^14.0.0",
-    "ts-jest": "^28.0.4",
+    "ts-jest": "^28.0.5",
     "ts-node": "^10.8.1",
     "typedoc": "^0.22.17",
-    "typescript": "^4.7.3"
+    "typescript": "^4.7.4"
   },
   "dependencies": {
     "chalk": "4.1.2",
