--- a/.github/workflows/caffemocha.yml
+++ b/.github/workflows/caffemocha.yml
@@ -1,13 +1,12 @@
 name: Caffe Mocha
 
 on:
-  [push, pull_request]
+  push:
 
 jobs:
   main:
     name: Iroiro na Test
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name != github.repository
     env:
       FORCE_COLOR: 2
 
