--- a/package.json
+++ b/package.json
@@ -24,17 +24,18 @@
   },
   "keywords": [
     "discord-bot",
-    "slash-commands"
+    "slash-commands",
+    "discordjs"
   ],
   "devDependencies": {
     "@leomotors/scripts": "^3.1.0",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
-    "@types/jest": "^28.1.2",
+    "@types/jest": "^28.1.3",
     "@types/marked": "^4.0.3",
     "@types/node": "^18.0.0",
     "@types/sinon": "^10.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.28.0",
-    "@typescript-eslint/parser": "^5.28.0",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
     "eslint": "^8.18.0",
     "globby": "11.1.0",
     "highlight.js": "^11.5.1",
@@ -53,7 +54,7 @@
   "dependencies": {
     "chalk": "4.1.2",
     "commander": "^9.3.0",
-    "discord.js": "^14.0.0-dev.1655640259-358c3f4"
+    "discord.js": "^14.0.0-dev.1655899441-a3799f9"
   },
   "exports": {
     ".": "./dist/main/index.js",
