--- a/package.json
+++ b/package.json
@@ -17,10 +17,8 @@
     "lint": "eslint src && prettier --check \"*.{js,ts}\" && prettier --check \"{src,tests}/**/*.ts\"",
     "test": "jest",
     "ncu": "ncu -u \"/^(?!.*chalk)(?!.*globby).*$/\"",
-    "pre-doc": "ts-node predoc.script.ts",
-    "docs": "typedoc",
-    "post-doc": "ts-node postdoc.script.ts",
-    "full-doc": "yarn lm:config && yarn pre-doc && yarn docs && yarn post-doc"
+    "docs:dev": "vitepress dev docs",
+    "docs": "yarn lm:config && vitepress build docs && typedoc"
   },
   "keywords": [
     "discord-bot",
@@ -41,7 +39,7 @@
     "highlight.js": "^11.5.1",
     "jest": "^28.1.1",
     "marked": "^4.0.17",
-    "npm-check-updates": "^14.0.1",
+    "npm-check-updates": "^14.0.2",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "sinon": "^14.0.0",
@@ -49,7 +47,9 @@
     "ts-node": "^10.8.1",
     "typedoc": "^0.22.17",
     "typescript": "^4.7.4",
-    "uglify-js": "^3.16.1"
+    "uglify-js": "^3.16.1",
+    "vitepress": "^1.0.0-alpha.4",
+    "vue": "^3.2.37"
   },
   "dependencies": {
     "chalk": "4.1.2",
