--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cocoa-discord-utils",
-  "version": "2.0.0-beta.3",
+  "version": "2.0.0-beta.4",
   "description": "Yet another Discord Bot Utility npm package",
   "main": "dist/main/index.js",
   "repository": "https://github.com/Leomotors/cocoa-discord-utils",
@@ -54,7 +54,7 @@
   "dependencies": {
     "chalk": "4.1.2",
     "commander": "^9.3.0",
-    "discord.js": "=14.0.0-dev.1656158629-c4653f9"
+    "discord.js": "^14.0.0-dev.1656158629-c4653f9"
   },
   "exports": {
     ".": "./dist/main/index.js",
