--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "cocoa-discord-utils",
-  "version": "2.0.0-beta.5",
+  "version": "2.0.0-beta.6",
   "description": "Yet another Discord Bot Utility npm package",
   "main": "dist/main/index.js",
   "repository": "https://github.com/Leomotors/cocoa-discord-utils",
-  "homepage": "https://github.com/Leomotors/cocoa-discord-utils",
+  "homepage": "https://leomotors.me/cocoa-discord-utils/",
   "author": "Leomotors",
   "license": "MIT",
   "scripts": {
