Update algo and docs

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "cb": "yarn clean && yarn build",
     "lm:config": "lm-config src/meta/cocoa_meta.g.ts",
     "prepack": "yarn cb && yarn lint && yarn test",
-    "format": "prettier --write \"*.{js,ts}\" && prettier --write \"{src,tests}/**/*.ts\"",
-    "lint": "eslint src && prettier --check \"*.{js,ts}\" && prettier --check \"{src,tests}/**/*.ts\"",
+    "format": "prettier --write \"*.{js,ts}\" && prettier --write \"{docs,src,tests}/**/*.{ts,vue,css}\"",
+    "lint": "eslint src && prettier --check \"*.{js,ts}\" && prettier --check \"{docs,src,tests}/**/*.{ts,vue,css}\"",
     "test": "jest",
     "ncu": "ncu -u \"/^(?!.*chalk)(?!.*globby).*$/\"",
     "docs:dev": "vitepress dev docs",
