--- a/.prettierrc
+++ b/.prettierrc
@@ -7,6 +7,7 @@
     "printWidth": 80,
     "importOrder": [
         "^\\.\\/stub",
+        "^vitest",
         "^discord[-.]",
         "^@discordjs",
         "^[a-zA-Z]",
