--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "prepack": "yarn cb && yarn lint && yarn test",
     "format": "prettier --write \"*.{js,ts}\" && prettier --write \"{docs,src,tests}/**/*.{ts,vue,css}\"",
     "lint": "eslint src && prettier --check \"*.{js,ts}\" && prettier --check \"{docs,src,tests}/**/*.{ts,vue,css}\"",
-    "test": "jest",
+    "test": "vitest run",
     "ncu": "ncu -u \"/^(?!.*chalk)(?!.*globby).*$/\"",
     "docs:dev": "vitepress dev docs",
     "docs": "yarn lm:config && vitepress build docs && typedoc && touch docs-dist/.nojekyll"
@@ -28,27 +28,22 @@
   "devDependencies": {
     "@leomotors/scripts": "^3.1.0",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
-    "@types/jest": "^28.1.3",
     "@types/marked": "^4.0.3",
     "@types/node": "^18.0.0",
     "@types/sinon": "^10.0.11",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
+    "c8": "^7.11.3",
     "eslint": "^8.18.0",
-    "globby": "11.1.0",
-    "highlight.js": "^11.5.1",
-    "jest": "^28.1.1",
-    "marked": "^4.0.17",
     "npm-check-updates": "^14.1.1",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "sinon": "^14.0.0",
-    "ts-jest": "^28.0.5",
-    "ts-node": "^10.8.1",
-    "typedoc": "^0.22.18",
+    "typedoc": "^0.23.1",
     "typescript": "^4.7.4",
     "uglify-js": "^3.16.1",
     "vitepress": "^1.0.0-alpha.4",
+    "vitest": "^0.16.0",
     "vue": "^3.2.37"
   },
   "dependencies": {
