--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "sinon": "^14.0.0",
+    "ts-node": "^10.8.1",
     "typedoc": "^0.23.1",
     "typescript": "^4.7.4",
     "uglify-js": "^3.16.1",
