--- a/package.json
+++ b/package.json
@@ -33,12 +33,16 @@
     "@types/sinon": "^10.0.11",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
+    "@vitejs/plugin-vue-jsx": "^1.3.10",
+    "autoprefixer": "^10.4.7",
     "c8": "^7.11.3",
     "eslint": "^8.18.0",
     "npm-check-updates": "^14.1.1",
+    "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "sinon": "^14.0.0",
+    "tailwindcss": "^3.1.4",
     "ts-node": "^10.8.1",
     "typedoc": "^0.23.1",
     "typescript": "^4.7.4",
