--- a/templates/hybrid/package.json
+++ b/templates/hybrid/package.json
@@ -4,7 +4,6 @@
   "description": "Template Discord Bot using Cocoa Discord Utils (Has both message and slash commands)",
   "main": "dist/bot.js",
   "type": "module",
-  "private": "true",
   "scripts": {
     "build": "tsc",
     "clean": "rm -rf dist/*",
@@ -14,14 +13,14 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.22.0",
-    "@typescript-eslint/parser": "^5.22.0",
-    "eslint": "^8.14.0",
-    "prettier": "^2.6.2",
-    "typescript": "^4.6.4"
+    "@typescript-eslint/eslint-plugin": "^5.30.5",
+    "@typescript-eslint/parser": "^5.30.5",
+    "eslint": "^8.19.0",
+    "prettier": "^2.7.1",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
-    "cocoa-discord-utils": "^1.8.0",
-    "dotenv": "^16.0.0"
+    "cocoa-discord-utils": "^2.0.0-pre.2",
+    "dotenv": "^16.0.1"
   }
 }
