--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cocoa-discord-utils",
-  "version": "2.0.0-pre.3",
+  "version": "2.0.0",
   "description": "Yet another Discord Bot Utility npm package",
   "main": "dist/main/index.js",
   "repository": "https://github.com/Leomotors/cocoa-discord-utils",
@@ -12,11 +12,11 @@
     "clean": "rimraf dist coverage docs-dist typedoc-out",
     "cb": "yarn clean && yarn build",
     "lm:config": "lm-config src/meta/cocoa_meta.g.ts",
-    "prepack": "yarn cb && yarn lint && IGNORE_COLOR=1 yarn test",
+    "prepack": "yarn cb && yarn lint && yarn test",
     "format": "prettier --write \"*.{js,ts}\" && prettier --write \"{docs,src,tests}/**/*.{ts,vue,css}\"",
     "lint": "eslint src && prettier --check \"*.{js,ts}\" && prettier --check \"{docs,src,tests}/**/*.{ts,vue,css}\"",
-    "test": "vitest run",
-    "ncu": "ncu -u !chalk",
+    "test": "FORCE_COLOR=2 vitest run",
+    "deps": "ncu -u !chalk",
     "docs:dev": "vitepress dev docs",
     "docs": "yarn lm:config && vitepress build docs && typedoc && touch docs-dist/.nojekyll"
   },
@@ -31,34 +31,35 @@
   ],
   "devDependencies": {
     "@leomotors/scripts": "^3.1.0",
-    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
+    "@trivago/prettier-plugin-sort-imports": "^3.3.0",
     "@types/marked": "^4.0.3",
-    "@types/node": "^18.0.3",
+    "@types/node": "^18.0.6",
     "@types/sinon": "^10.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.30.5",
-    "@typescript-eslint/parser": "^5.30.5",
-    "@vitejs/plugin-vue-jsx": "^1.3.10",
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@typescript-eslint/parser": "^5.30.6",
+    "@vitejs/plugin-vue-jsx": "^2.0.0",
     "autoprefixer": "^10.4.7",
     "c8": "^7.11.3",
-    "eslint": "^8.19.0",
-    "npm-check-updates": "^15.2.6",
+    "eslint": "^8.20.0",
+    "npm-check-updates": "^15.3.4",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "sinon": "^14.0.0",
-    "tailwindcss": "^3.1.5",
-    "ts-node": "^10.8.2",
-    "typedoc": "^0.23.7",
+    "tailwindcss": "^3.1.6",
+    "ts-node": "^10.9.1",
+    "typedoc": "^0.23.8",
     "typescript": "^4.7.4",
     "uglify-js": "^3.16.2",
-    "vitepress": "^1.0.0-alpha.4",
-    "vitest": "^0.18.0",
+    "vite": "^3.0.1",
+    "vitepress": "1.0.0-alpha.4",
+    "vitest": "^0.18.1",
     "vue": "^3.2.37"
   },
   "dependencies": {
-    "chalk": "4.1.2",
-    "commander": "^9.3.0",
-    "discord.js": "^14.0.0-dev"
+    "chalk": "=4.1.2",
+    "commander": "^9.4.0",
+    "discord.js": "^14.0.2"
   },
   "exports": {
     ".": "./dist/main/index.js",
