--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
   "name": "cocoa-discord-utils",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "Yet another Discord Bot Utility npm package",
   "main": "dist/main/index.js",
-  "repository": "https://github.com/Leomotors/cocoa-discord-utils",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Leomotors/cocoa-discord-utils"
+  },
   "homepage": "https://leomotors.me/cocoa-discord-utils/",
   "author": "Leomotors",
   "license": "MIT",
   "scripts": {
-    "build": "yarn lm:config && tsc && ts-node postbuild.script.ts dist/**/*.js dist/*/**/*.js && rimraf \"dist/cli/**/*.d.ts\"",
+    "build": "yarn lm:config && tsc && ts-node postbuild.script.ts dist/**/*.js dist/*/**/*.js && rimraf \"dist/cli/**/*.d.ts*\"",
     "clean": "rimraf dist coverage docs-dist typedoc-out",
     "cb": "yarn clean && yarn build",
     "lm:config": "lm-config src/meta/cocoa_meta.g.ts",
     "prepack": "yarn cb && yarn lint && yarn test",
-    "format": "prettier --write \"*.{js,ts}\" && prettier --write \"{docs,src,tests}/**/*.{ts,vue,css}\"",
-    "lint": "eslint src && prettier --check \"*.{js,ts}\" && prettier --check \"{docs,src,tests}/**/*.{ts,vue,css}\"",
+    "format": "prettier --write \"*.{js,ts}\" \"{docs,src,tests}/**/*.{ts,vue,css}\"",
+    "lint": "eslint src *{.js,ts} --max-warnings=0",
     "test": "FORCE_COLOR=2 vitest run",
     "deps": "ncu -u !chalk",
     "docs:dev": "vitepress dev docs --port=3186",
@@ -34,13 +37,15 @@
     "@trivago/prettier-plugin-sort-imports": "^3.3.0",
     "@types/marked": "^4.0.3",
     "@types/node": "^18.0.6",
-    "@types/sinon": "^10.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.30.6",
-    "@typescript-eslint/parser": "^5.30.6",
+    "@types/sinon": "^10.0.13",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
     "@vitejs/plugin-vue-jsx": "^2.0.0",
     "autoprefixer": "^10.4.7",
-    "c8": "^7.11.3",
+    "c8": "^7.12.0",
     "eslint": "^8.20.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "npm-check-updates": "^15.3.4",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
@@ -51,7 +56,7 @@
     "typedoc": "^0.23.8",
     "typescript": "^4.7.4",
     "uglify-js": "^3.16.2",
-    "vite": "^3.0.1",
+    "vite": "^3.0.2",
     "vitepress": "1.0.0-alpha.4",
     "vitest": "^0.18.1",
     "vue": "^3.2.37"
@@ -59,7 +64,7 @@
   "dependencies": {
     "chalk": "=4.1.2",
     "commander": "^9.4.0",
-    "discord.js": "^14.0.2"
+    "discord.js": "^14.0.3"
   },
   "exports": {
     ".": "./dist/main/index.js",
