--- a/packages/cocoa-discord-utils/package.json
+++ b/packages/cocoa-discord-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cocoa-discord-utils",
-  "version": "2.2.0",
+  "version": "2.3.0",
   "description": "Yet another Discord Bot Utility npm package",
   "main": "dist/main/index.js",
   "repository": {
@@ -42,6 +42,7 @@
     "c8": "^7.12.0",
     "eslint": "^8.21.0",
     "npm-check-updates": "^16.0.5",
+    "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "sinon": "^14.0.0",
     "ts-node": "^10.9.1",
