--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -16,17 +16,37 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Yarn Cache
-        uses: c-hive/gha-yarn-cache@v2
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        id: pnpm-install
+        with:
+          version: 7
+          run_install: false
 
-      - name: Install Dependencies (Yarn)
-        run: yarn install
+      - name: Get pnpm store directory
+        id: pnpm-cache
+        run: |
+          echo "::set-output name=pnpm_cache_dir::$(pnpm store path)"
+
+      - uses: actions/cache@v3
+        name: Setup pnpm cache
+        with:
+          path: ${{ steps.pnpm-cache.outputs.pnpm_cache_dir }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+
+      - name: Install Dependencies
+        run: pnpm install
 
       - name: Build documentation
-        run: yarn docs
+        run: pnpm run docs
 
-      - name: Deploy documentation
-        uses: JamesIves/github-pages-deploy-action@4.1.0
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
         with:
-          branch: gh-pages
-          folder: docs-dist
+          path: docs-dist
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@main
