--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -5,22 +5,21 @@
   "scripts": {
     "dev": "vitepress dev src --port=3186",
     "docs": "vitepress build src",
-    "lint": "eslint src",
-    "deps": "ncu -u"
+    "lint": "eslint src"
   },
   "devDependencies": {
-    "@cocoa-discord-utils/config": "workspace:*",
-    "@vitejs/plugin-vue-jsx": "^2.0.0",
+    "@cocoa-discord-utils/config": "workspace:0.0.0",
+    "@vitejs/plugin-vue-jsx": "^2.0.1",
     "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/eslint-config-typescript": "^11.0.0",
+    "@vue/eslint-config-typescript": "^11.0.1",
     "@vue/tsconfig": "^0.1.3",
-    "autoprefixer": "^10.4.8",
-    "eslint": "^8.21.0",
-    "eslint-plugin-vue": "^9.3.0",
+    "autoprefixer": "^10.4.11",
+    "eslint": "^8.23.1",
+    "eslint-plugin-vue": "^9.5.1",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
-    "vite": "^3.0.4",
-    "vitepress": "1.0.0-alpha.4",
-    "vue": "^3.2.37"
+    "vite": "^3.1.2",
+    "vitepress": "1.0.0-alpha.15",
+    "vue": "^3.2.39"
   }
 }
