--- a/package.json
+++ b/package.json
@@ -2,22 +2,16 @@
   "name": "@cocoa-discord-utils/turborepo",
   "version": "0.0.0",
   "private": true,
-  "workspaces": [
-    "apps/**/*",
-    "packages/*"
-  ],
   "scripts": {
     "build": "FORCE_COLOR=2 turbo run build",
     "dev": "FORCE_COLOR=2 turbo run dev --parallel",
     "lint": "FORCE_COLOR=2 turbo run lint",
     "format": "FORCE_COLOR=2 turbo run format",
     "test": "FORCE_COLOR=2 turbo run test",
-    "docs": "FORCE_COLOR=2 turbo run docs --parallel && bash postdoc.bash",
-    "deps": "ncu -u && FORCE_COLOR=2 turbo run deps --parallel"
+    "docs": "FORCE_COLOR=2 turbo run docs --parallel && bash postdoc.bash"
   },
   "devDependencies": {
-    "npm-check-updates": "^16.0.5",
-    "turbo": "1.4.2"
-  },
-  "packageManager": "yarn@3.2.2"
+    "turbo": "^1.4.7",
+    "typescript": "^4.8.3"
+  }
 }
