--- a/packages/cocoa-discord-utils/package.json
+++ b/packages/cocoa-discord-utils/package.json
@@ -7,22 +7,21 @@
     "type": "git",
     "url": "https://github.com/Leomotors/cocoa-discord-utils"
   },
-  "homepage": "https://leomotors.me/cocoa-discord-utils/",
+  "homepage": "https://leomotors.github.io/cocoa-discord-utils/",
   "author": "Leomotors",
   "license": "MIT",
   "scripts": {
-    "build": "yarn lm:config && tsc && ts-node postbuild.script.ts dist/**/*.js dist/*/**/*.js && rimraf \"dist/cli/**/*.d.ts*\"",
+    "build": "pnpm lm:config && tsc && ts-node postbuild.script.ts dist/**/*.js dist/*/**/*.js && rimraf \"dist/cli/**/*.d.ts*\"",
     "clean": "rimraf dist coverage docs-dist typedoc-out",
-    "cb": "yarn clean && yarn build",
+    "cb": "pnpm clean && pnpm build",
     "lm:config": "lm-config src/meta/cocoa_meta.g.ts",
-    "prepack": "yarn cb && yarn lint && yarn test",
+    "prepack": "pnpm cb && pnpm lint && pnpm test",
     "lint": "eslint src *.{js,ts} --max-warnings=0",
     "format": "eslint src *.{js,ts} --fix",
     "test": "FORCE_COLOR=2 vitest run",
-    "deps": "ncu -u !chalk",
-    "docs": "yarn lm:config && typedoc"
+    "test:coverage": "FORCE_COLOR=2 vitest run --coverage",
+    "docs": "pnpm lm:config && typedoc"
   },
-  "packageManager": "yarn@3.2.1",
   "bin": {
     "cocoadu": "dist/cli/index.js"
   },
@@ -32,29 +31,33 @@
     "discordjs"
   ],
   "devDependencies": {
-    "@cocoa-discord-utils/config": "workspace:*",
+    "@cocoa-discord-utils/config": "workspace:0.0.0",
     "@leomotors/scripts": "^3.1.0",
     "@trivago/prettier-plugin-sort-imports": "^3.3.0",
-    "@types/node": "^18.6.4",
+    "@types/node": "^18.7.18",
     "@types/sinon": "^10.0.13",
-    "@typescript-eslint/eslint-plugin": "^5.32.0",
-    "@typescript-eslint/parser": "^5.32.0",
+    "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "@typescript-eslint/parser": "^5.37.0",
+    "@vitest/coverage-c8": "^0.23.4",
     "c8": "^7.12.0",
-    "eslint": "^8.21.0",
-    "npm-check-updates": "^16.0.5",
+    "discord.js": "^14.3.0",
+    "eslint": "^8.23.1",
+    "npm-check-updates": "^16.1.3",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "sinon": "^14.0.0",
     "ts-node": "^10.9.1",
-    "typedoc": "^0.23.10",
-    "typescript": "^4.7.4",
-    "uglify-js": "^3.16.3",
-    "vitest": "^0.21.0"
+    "typedoc": "^0.23.14",
+    "typescript": "^4.8.3",
+    "uglify-js": "^3.17.0",
+    "vitest": "^0.23.4"
   },
   "dependencies": {
-    "chalk": "=4.1.2",
+    "@discordjs/builders": "^1.2.0",
+    "chalk": "4.1.2",
     "commander": "^9.4.0",
-    "discord.js": "^14.1.2"
+    "discord-api-types": "^0.37.10",
+    "discord.js": "^14.3.0"
   },
   "exports": {
     ".": "./dist/main/index.js",
