--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -3,13 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "format": "eslint --fix",
-    "deps": "ncu -u"
+    "format": "eslint --fix"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^3.3.0",
-    "@types/eslint": "^8.4.5",
-    "eslint": "8.21.0",
+    "@types/eslint": "^8.4.6",
+    "eslint": "8.23.1",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.2.1",
     "prettier": "2.7.1"
