--- a/packages/cocoa-discord/package.json
+++ b/packages/cocoa-discord/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "cocoa-discord-utils",
+  "name": "cocoa-discord",
   "version": "2.4.0-dev",
   "description": "Yet another Discord Bot Utility npm package",
   "main": "dist/main/index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Leomotors/cocoa-discord-utils"
+    "url": "https://github.com/Leomotors/cocoa-discord"
   },
-  "homepage": "https://leomotors.github.io/cocoa-discord-utils/",
+  "homepage": "https://leomotors.github.io/cocoa-discord",
   "author": "Leomotors",
   "license": "MIT",
   "scripts": {
@@ -31,7 +31,7 @@
     "discordjs"
   ],
   "devDependencies": {
-    "@cocoa-discord-utils/config": "workspace:0.0.0",
+    "@cocoa-discord/config": "workspace:0.0.0",
     "@leomotors/scripts": "^3.1.0",
     "@trivago/prettier-plugin-sort-imports": "^3.3.0",
     "@types/node": "^18.8.3",
