feat: refactor styles and bump

--- a/packages/cocoa-discord-utils/package.json
+++ b/packages/cocoa-discord-utils/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cocoa-discord-utils",
-  "version": "2.4.0-dev",
+  "name": "cocoa-discord",
+  "version": "2.4.0",
   "description": "Yet another Discord Bot Utility npm package",
   "main": "dist/main/index.js",
   "repository": {
@@ -32,31 +32,30 @@
   ],
   "devDependencies": {
     "@cocoa-discord-utils/config": "workspace:0.0.0",
-    "@leomotors/scripts": "^3.1.0",
-    "@trivago/prettier-plugin-sort-imports": "^3.3.0",
-    "@types/node": "^18.8.3",
-    "@types/sinon": "^10.0.13",
-    "@typescript-eslint/eslint-plugin": "^5.39.0",
-    "@typescript-eslint/parser": "^5.39.0",
-    "@vitest/coverage-c8": "^0.24.0",
-    "c8": "^7.12.0",
-    "discord.js": "^14.3.0",
-    "eslint": "^8.24.0",
-    "npm-check-updates": "^16.3.8",
-    "prettier": "^2.7.1",
-    "rimraf": "^3.0.2",
-    "sinon": "^14.0.1",
-    "ts-node": "^10.9.1",
-    "typedoc": "^0.23.15",
-    "typescript": "^4.8.4",
-    "vitest": "^0.24.0"
+    "@leomotors/scripts": "3.1.0",
+    "@trivago/prettier-plugin-sort-imports": "4.1.1",
+    "@types/node": "20.4.2",
+    "@types/sinon": "10.0.15",
+    "@typescript-eslint/eslint-plugin": "6.0.0",
+    "@typescript-eslint/parser": "6.0.0",
+    "@vitest/coverage-c8": "0.33.0",
+    "c8": "8.0.0",
+    "discord.js": "14.3.0",
+    "eslint": "8.45.0",
+    "prettier": "3.0.0",
+    "rimraf": "5.0.1",
+    "sinon": "15.2.0",
+    "ts-node": "10.9.1",
+    "typedoc": "0.24.8",
+    "typescript": "5.1.6",
+    "vitest": "0.33.0"
   },
   "dependencies": {
-    "@discordjs/builders": "^1.2.0",
-    "chalk": "4.1.2",
-    "commander": "^9.4.1",
-    "discord-api-types": "^0.37.12",
-    "discord.js": "^14.5.0"
+    "@discordjs/builders": "^1.6.3",
+    "chalk": "5.3.0",
+    "commander": "^11.0.0",
+    "discord-api-types": "^0.37.48",
+    "discord.js": "^14.11.0"
   },
   "exports": {
     ".": "./dist/main/index.js",
