--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -9,18 +9,18 @@
   },
   "devDependencies": {
     "@cocoa-discord-utils/config": "workspace:0.0.0",
-    "@vitejs/plugin-vue-jsx": "^2.0.1",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/eslint-config-typescript": "^11.0.2",
-    "@vue/tsconfig": "^0.1.3",
-    "autoprefixer": "^10.4.12",
-    "eslint": "^8.24.0",
-    "eslint-plugin-vue": "^9.6.0",
-    "postcss": "^8.4.17",
-    "tailwindcss": "^3.1.8",
-    "typescript": "^4.8.4",
-    "vite": "^3.1.6",
-    "vitepress": "1.0.0-alpha.19",
-    "vue": "^3.2.40"
+    "@vitejs/plugin-vue-jsx": "3.0.1",
+    "@vue/eslint-config-prettier": "7.1.0",
+    "@vue/eslint-config-typescript": "11.0.3",
+    "@vue/tsconfig": "0.4.0",
+    "autoprefixer": "10.4.14",
+    "eslint": "8.45.0",
+    "eslint-plugin-vue": "9.15.1",
+    "postcss": "8.4.26",
+    "tailwindcss": "3.3.3",
+    "typescript": "5.1.6",
+    "vite": "4.4.4",
+    "vitepress": "1.0.0-beta.5",
+    "vue": "3.3.4"
   }
 }
