--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "docs": "FORCE_COLOR=2 turbo run docs --parallel && bash postdoc.bash"
   },
   "devDependencies": {
-    "turbo": "^1.5.5",
-    "typescript": "^4.8.4",
-    "vite": "^3.1.6",
-    "vitest": "^0.24.0"
+    "turbo": "1.10.7",
+    "typescript": "5.1.6",
+    "vite": "4.4.4",
+    "vitest": "0.33.0"
   }
 }
