--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -6,11 +6,11 @@
     "format": "eslint --fix"
   },
   "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "^3.3.0",
-    "@types/eslint": "^8.4.6",
-    "eslint": "8.24.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-prettier": "4.2.1",
-    "prettier": "2.7.1"
+    "@trivago/prettier-plugin-sort-imports": "4.1.1",
+    "@types/eslint": "8.44.0",
+    "eslint": "8.45.0",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-plugin-prettier": "5.0.0",
+    "prettier": "3.0.0"
   }
 }
